# anticipation-geometry

./: .gitignore  CHANGELOG.md  Cargo.toml  DATA_FORMATS.md  GOTCHAS.md  README.md  pyproject.toml
anticipation_geometry/: __init__.py
anticipation_geometry/training/: __init__.py
crates/anticipation/: Cargo.toml
crates/anticipation/benches/: kernel_bench.rs
crates/anticipation/docs/: CHECKLIST.md  CONTINUATION.md  GLOSSARY.md  IMPLEMENTATION_GUIDE.md  INVARIANTS.md  PROJECT_CHARTER.md
crates/anticipation/examples/: basic_scalars.rs
crates/anticipation/python/cc_anticipation/: __init__.py
crates/anticipation/python/tests/: test_kernel.py
crates/anticipation/src/: bindings.rs  config.rs  kernel.rs  lib.rs  types.rs
crates/anticipation/src/constraints/: mod.rs
crates/anticipation/src/embedding/: mod.rs  projection.rs
crates/anticipation/src/features/: forward_kinematics.rs  kinematics.rs  latent_dynamics.rs  mod.rs
crates/anticipation/src/neighbors/: dispersion.rs  mod.rs
crates/anticipation/src/phrase/: extraction.rs  fusion.rs  library.rs  mod.rs  persistence.rs  prior.rs  tests.rs  types.rs
crates/anticipation/src/replay/: mod.rs
crates/anticipation/src/scalars/: mod.rs
crates/anticipation/src/telemetry/: mod.rs
crates/anticipation/tests/: anticipation_tests.rs  behavioral.rs
crates/core-rs/: Cargo.toml
crates/core-rs/src/: bindings.rs  equilibrium_kernel.rs  lib.rs  matrix_ops.rs  one_euro_filter.rs  proximal_ops.rs  ring_buffer.rs  slew_limiter.rs  stability_metrics.rs
crates/core-rs/src/lim_rps/: config.rs  dynamics.rs  latent_state.rs  mod.rs  operator.rs  solver.rs  spectral.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: clock.rs  coherence.rs  control_packet.rs  latent.rs  lib.rs  mocopi.rs  mocopi_state.rs  section_state.rs  sensor.rs  serialization.rs
crates/protocol/src/network/: control.rs  data.rs  device.rs  mod.rs  sync.rs
crates/protocol/src/strudel_ir/: edit.rs  effect.rs  mod.rs  pattern.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
examples/: demo_motion.py
paper/: README.md  anticipatory-transformer.md  paper.md
python/: inscription_retrain.py  paper1_enhanced_eval.py  requirements.txt  setup.py
python/anticipation_geometry/: __init__.py  conversation_trajectory.py  eval_harness.py  generalized_anticipation.py  kg_reward.py
results/: evaluation-V6-e5large.json  evaluation-v3-real-embeddings.json  inscription-retrain-results.json  kg-reward-discrimination.json
training/: filter_quality.py  prepare_data.py  program.md  pull_supabase_turns.py  thunder_5runs.sh  train_experiment.py
training-results/: results_real.json
transformer/: __init__.py  config.py  evaluate.py  geometry_bridge.py  model.py  train.py
vastai/: prepare_thunder_data.py  run_all.sh
vastai/configs/: qwen3_4b_qlora.yaml
