[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "anticipation-geometry"
version = "0.3.0"
description = "Trajectory characterization via 7 geometric scalars. From motion capture to LLM training."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Mohamed Diomande"}]
keywords = ["anticipation", "geometry", "trajectory", "scalars", "llm", "training", "motion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
train = [
    "torch>=2.1",
    "transformers>=4.38,<5",
    "accelerate>=0.25",
    "peft>=0.7,<1",
    "bitsandbytes>=0.42,<0.44",
    "datasets>=2.16",
    "pyyaml",
]
mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = [
    "anticipation-geometry[embeddings,train,dev]",
]

[project.urls]
Homepage = "https://github.com/Diomandeee/anticipation-geometry"
Repository = "https://github.com/Diomandeee/anticipation-geometry"
Documentation = "https://github.com/Diomandeee/anticipation-geometry#readme"

[tool.setuptools.packages.find]
include = ["anticipation_geometry*"]

[tool.ruff]
line-length = 120
target-version = "py39"
