[package]
name = "cc-anticipation"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Diomande"]
description = "Anticipation kernel: converts motion state into 7 actionable anticipatory scalars via geometric analysis of motion phase space"
license = "MIT"
repository = "https://github.com/Diomandeee/anticipation-geometry"
keywords = ["motion", "anticipation", "signal-processing", "real-time", "geometry"]
categories = ["science", "multimedia"]

[lib]
name = "cc_anticipation"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]
neighbors = []

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cc-core-rs = { path = "../core-rs" }
cc-protocol = { path = "../protocol" }

# Optional: Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
tempfile = "3.10"

[[bench]]
name = "kernel_bench"
harness = false

[[example]]
name = "basic_scalars"
