[package]
name = "cc-core-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Diomande"]
description = "High-performance Rust kernels for real-time signal processing: lock-free buffers, filters, equilibrium solvers"
license = "MIT"
repository = "https://github.com/Diomandeee/anticipation-geometry"
keywords = ["audio", "real-time", "signal-processing", "ring-buffer", "filter"]
categories = ["multimedia::audio", "science"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "cc_core_rs"

[features]
default = []
python = ["pyo3", "numpy"]

[dependencies]
# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
numpy = { version = "0.20", optional = true }

# Concurrency
crossbeam = "0.8"
rayon = "1.10"

# Portable atomics
portable-atomic = { version = "1.6", features = ["float"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
