[package]
name = "cc-protocol"
version = "0.1.0"
edition = "2021"
description = "Unified protocol definitions for Computational Choreography - the shared language between all components"
authors = ["Mohamed Diomande"]
license = "MIT"
repository = "https://github.com/Diomandeee/anticipation-geometry"

[lib]
name = "cc_protocol"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "=1.1.2"

nalgebra = { version = "0.32", optional = true }

thiserror = "1.0"

csv = { version = "1.3", optional = true }

[build-dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"

[features]
default = ["std"]
std = []
codegen = ["csv"]
strudel-api = []
swift-bindings = []
typescript-bindings = []
python-bindings = []
