[package]
name = "cc-types"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Diomande"]
description = "Core types for Computational Choreography motion processing"
license = "MIT"
repository = "https://github.com/Diomandeee/anticipation-geometry"
keywords = ["motion", "skeleton", "sensor-fusion", "types"]
categories = ["science", "multimedia"]

[lib]
name = "cc_types"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
smallvec = { version = "1.11", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
